--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "mysql": "^2.18.1"
-  },
   "devDependencies": {
     "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "mysql2": "^2.3.3"
   }
 }
